# Clion_qml_template

./: CMakeLists.txt  CProgressBar.qml  Main.qml  WaterProgress.qml  main.cpp  src.qrc
